# JoyVASA

./: .gitignore  Build Engines.md  app.py  inference.py  requirements.txt
.agent/rules/: environment.md
.agent/skills/brainstorming/: SKILL.md
.agent/skills/brainstorming/agents/: openai.yaml
native/trt_plugins/joyvasa_grid_sample3d/: CMakeLists.txt
native/trt_plugins/joyvasa_grid_sample3d/src/: grid_sample3d_kernel.cu  grid_sample3d_kernel.hpp  grid_sample3d_plugin.cpp
src/: live_portrait_wmg_pipeline.py  live_portrait_wmg_pipeline_animal.py  live_portrait_wmg_wrapper.py
src/config/: argument_config.py  cli_utils.py  crop_config.py  inference_config.py
src/modules/: dit_talking_head.py  hubert.py  motion_extractor.py  wav2vec2.py
src/runtime/: __init__.py  engine_utils.py  export_wrappers.py  factory.py  onnx_grid_sample3d.py  runners.py  trt_plugins.py
src/utils/: animal_landmark_runner.py  cropper.py  filter.py  helper.py  human_landmark_runner.py
tests/: test_build_trt_plugins.py  test_onnx_grid_sample3d.py  test_runtime_engine_utils.py  test_runtime_factory.py  test_runtime_trt_plugins.py  test_validate_warping_trt.py
tools/: TRT_PLUGINS.md  benchmark_backends.py  build_trt_engines.py  build_trt_plugins.py  config.json  export_onnx.py  validate_warping_trt.py
